<resources>
    <string name="app_name">exam-android</string>
    <string name="sign_up">Sign Up</string>
    <string name="sign_in">Sign In</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="or">- OR -</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="sign_in_with">Sign in with</string>
    <string name="footer_p_sign_in">Don\'t have an Account?</string>
    <string name="footer_p_sign_un">Have an Account?</string>
    <string name="remember"> Remember me</string>
    <string name="enter_ur_mail">Enter your email</string>
    <string name="enter_ur_phone">Enter your phone</string>
    <string name="enter_ur_name">Enter your Name</string>
    <string name="enter_ur_psw">Enter your Password</string>
    <string name="confirm_ur_psw">Confirm your Password</string>
    <string name="fullName">Full Name</string>
    <string name="phone_no">Phone No</string>
    <string name="confirm_psw">Confirm Password</string>
</resources>